--- a/src/pages/peice-for-all.astro
+++ b/src/pages/peice-for-all.astro
@@ -8,4 +8,13 @@ import PeiceForAll from '../components/peice-for-all/PeiceForAll.svelte';
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@500&display=swap" rel="stylesheet">
 </head>
 
-<PeiceForAll />
+<div class="p-4 md:p-12 mx-auto">
+  <PeiceForAll client:load />
+</div>
+
+<style>
+  body {
+    background-color: #1a1a1a;
+    color: white;
+  }
+</style>
