--- a/src/pages/piece-for-all.astro
+++ b/src/pages/piece-for-all.astro
@@ -1,5 +1,5 @@
 ---
-import PeiceForAll from '../components/peice-for-all/PeiceForAll.svelte';
+import PieceForAll from '../components/piece-for-all/PieceForAll.svelte';
 ---
 
 <head>
@@ -9,7 +9,7 @@ import PeiceForAll from '../components/peice-for-all/PeiceForAll.svelte';
 </head>
 
 <div class="p-4 md:p-12 mx-auto">
-  <PeiceForAll client:load />
+  <PieceForAll client:load />
 </div>
 
 <style>
