Run in web worker

--- a/src/pages/piece-for-all.astro
+++ b/src/pages/piece-for-all.astro
@@ -9,7 +9,8 @@ import PieceForAll from '../components/piece-for-all/PieceForAll.svelte';
 </head>
 
 <div class="p-4 md:p-12 mx-auto">
-  <PieceForAll client:load />
+  <!-- <PieceForAll client:load /> -->
+  <PieceForAll client:only />
 </div>
 
 <style>
